[gd_scene load_steps=2 format=3 uid="uid://dmdk8xy1sjama"]

[ext_resource type="Script" uid="uid://cxbs4gsaiac0y" path="res://scripts/Phishing.gd" id="1_ry0n7"]

[node name="Phishing" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 185.0
offset_bottom = 56.0

[node name="EmailBox" type="Panel" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = 62.0
offset_right = 730.0
offset_bottom = 419.0

[node name="Body" type="RichTextLabel" parent="EmailBox"]
layout_mode = 0
offset_left = 4.0
offset_top = 62.0
offset_right = 708.0
offset_bottom = 414.0

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 318.0
offset_top = 426.0
offset_right = 358.0
offset_bottom = 466.0

[node name="PhishBtn" type="Button" parent="Buttons"]
layout_mode = 2

[node name="LegitBtn" type="Button" parent="Buttons"]
layout_mode = 2

[node name="Feedback" type="Label" parent="."]
layout_mode = 0
offset_left = 684.0
offset_top = 339.0
offset_right = 1005.0
offset_bottom = 431.0

[node name="NextBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 112.0
offset_top = 425.0
offset_right = 131.0
offset_bottom = 471.0

[node name="BackBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 442.0
offset_right = 38.0
offset_bottom = 450.0
script = ExtResource("1_ry0n7")
